<resources>
    <string name="app_name">简票</string>
    <string name="EXIT">再按一次退出程序</string>
    <string name="EXIT_LOGON">退出当前账号</string>
    <string name="OK">好的</string>
    <string name="YES">是</string>
    <string name="NO">否</string>
    <string name="SURE">确定</string>
    <string name="CANCEL">取消</string>
    <string name="WAIT">请稍后…</string>
    <string name="FAILURE">失败</string>
    <string name="service_name">NFC_Service</string>
    <string name="card_title">NFC_CARD</string>
    <string name="login">登录</string>
    <string name="login_relogin">登录状态已经过期,请重新登录</string>
    <string name="login_start">正在登录,请稍等…</string>
    <string name="login_account">手机号</string>
    <string name="login_account_not_exist">账号不存在,请注册</string>
    <string name="login_password">密码</string>
    <string name="login_password_error">密码错误</string>
    <string name="login_register">没有账号？创建一个</string>
    <string name="login_third_party">用其他方式登录</string>
    <string name="login_not_empty_account">账号不能为空</string>
    <string name="login_not_empty_password">密码不能为空</string>
    <string name="login_not_phone">请输入手机号</string>
    <string name="bottombar_tab1">选站</string>
    <string name="bottombar_tab2">订单</string>
    <string name="bottombar_tab4">我的</string>
    <string name="order_tab_finish">已完成订单</string>
    <string name="order_tab_unfinish">未完成订单</string>
    <string name="order_tab_ticket_plan">计划购票</string>
    <string name="register">注册</string>
    <string name="register_succeed">注册成功</string>
    <string name="register_failure">注册失败</string>
    <string name="register_start">正在注册,请稍等…</string>
    <string name="register_click_avatar">添加头像</string>
    <string name="register_account">手机号</string>
    <string name="register_account_exist">账号已经存在</string>
    <string name="register_pwd1">密码</string>
    <string name="register_pwd2">确认密码</string>
    <string name="register_face">请添加三张脸部图片</string>
    <string name="register_toast_fail">缺少权限,打开失败</string>
    <string name="register_open_fail">没有找到能打开的设备</string>
    <string name="register_camera_null">当前设备没有相机</string>
    <string name="register_pwd_not_equals">两次密码不一致</string>
    <string name="menu_forgot_password">忘记密码？</string>
    <string name="menu_register_context_album">从相册中选取</string>
    <string name="menu_register_context_camera">拍照</string>
    <string name="menu_order_plan_buy_ticket">计划购票</string>
    <string name="front_camera_open_fail">相机打开失败</string>
    <string name="mine_user_default_name">请设置昵称</string>
    <string name="mine_user_money">账户余额</string>
    <string name="mine_user_default_money">-1</string>
    <string name="mine_user_wallet">充值</string>
    <string name="mine_user_expense_calendar">消费记录</string>
    <string name="mine_settings">设置</string>
    <string name="mine_nfc">NFC进出站</string>
    <string name="mine_station_navigation">站内导航</string>
    <string name="mine_feedback">反馈</string>
    <string name="mine_about">关于</string>
    <string name="mine_failure">信息获取失败</string>
    <string name="modify">修改</string>
    <string name="modify_sex_sex">性别:</string>
    <string name="modify_sex_man">男</string>
    <string name="modify_sex_women">女</string>
    <string name="modify_sex_secret">保密</string>
    <string name="modify_avatar">修改头像</string>
    <string name="modify_nickname">设置昵称</string>
    <string name="modify_save">保存</string>
    <string name="recharge">充值</string>
    <string name="recharge_money_text">请输入充值金额:</string>
    <string name="recharge_money_ok">确定</string>
    <string name="recharge_input_money">金额不能为空</string>
    <string name="recharge_succeed">充值成功</string>
    <string name="recharge_failure">充值失败,请重试</string>
    <string name="expense_calendar">消费记录</string>
    <string name="expense_calendar_empty">没有更多消费记录了</string>
    <string name="expense_calendar_date">日期：</string>
    <string name="expense_calendar_money">金额：</string>
    <string name="expense_calendar_recharge">充值</string>
    <string name="expense_calendar_refund">退票</string>
    <string name="expense_calendar_buy">购票</string>
    <string name="feedback">反馈</string>
    <string name="feedback_title">请输入内容(建议、Bug等):</string>
    <string name="feedback_back">提交</string>
    <string name="feedback_empty">内容不能为空</string>
    <string name="feedback_succeed">反馈成功</string>
    <string name="feedback_failure">反馈失败,请重试</string>
    <string name="settings">设置</string>
    <string name="settings_modify_login_pwd">修改登录密码</string>
    <string name="settings_modify_pay_pwd">修改支付密码</string>
    <string name="settings_nfc">NFC设置</string>
    <string name="station_commit_order">提交订单</string>
    <string name="station_commit_failure">提交失败</string>
    <string name="station_commit_attention">您当前存在未支付的订单，请支付后再购票</string>
    <string name="station_start">请选择起点站</string>
    <string name="station_end">请选择终点站</string>
    <string name="station_get_start">起点</string>
    <string name="station_get_end">终点</string>
    <string name="station_star_or_end">将此站设置为起点站还是终点站?</string>
    <string name="station_input">手动输入站点</string>
    <string name="about">关于</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="modify_login_pwd">修改登录密码</string>
    <string name="modify_login_pwd_succeed">修改成功</string>
    <string name="modify_login_old_pwd">旧密码</string>
    <string name="modify_login_input_old_pwd">请输入旧密码</string>
    <string name="modify_login_new1_pwd">新密码</string>
    <string name="modify_login_input_new1_pwd">请输入新密码</string>
    <string name="modify_login_new2_pwd">确认密码</string>
    <string name="modify_login_input_new2_pwd">请输入确认密码</string>
    <string name="modify_login_commit">提交</string>
    <string name="modify_login_pwd_not_equals">两次密码不一致</string>
    <string name="guide_welcome">地铁购票拥挤麻烦，为何不试试用手中的手机呢？地铁便捷购票，从此开始…</string>
    <string name="search_start_station">起始站：</string>
    <string name="search_end_station">终点站：</string>
    <string name="plan_ticket_type">类型：</string>
    <string name="plan_ticket_days">天数：</string>
    <string name="plan_ticket_start_days">起效时间：</string>
    <string name="plan_ticket_week_tickets">周票</string>
    <string name="plan_ticket_month_tickets">月票</string>
    <string name="plan_ticket_others_tickets">其它</string>
</resources>