<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/include_modify_pay_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/modify_pay_add_new_pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_vertical_margin"
        android:layout_marginTop="@dimen/edit_text_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_18dp"
            android:drawablePadding="@dimen/edit_text_vertical_margin"
            android:drawableStart="@drawable/ic_lock_outline_black_18dp"
            android:hint="@string/modify_login_new1_pwd"
            android:textSize="@dimen/text_normal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/modify_pay_add_new_pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_vertical_margin"
        android:layout_marginTop="@dimen/edit_text_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_18dp"
            android:drawablePadding="@dimen/edit_text_vertical_margin"
            android:drawableStart="@drawable/ic_lock_outline_black_18dp"
            android:hint="@string/modify_login_new2_pwd"
            android:textSize="@dimen/text_normal" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/modify_add_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/activity_vertical_mini_margin"
        android:background="@drawable/button_shape"
        android:text="@string/modify_login_commit" />

</LinearLayout>