<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.accelerator.metro.ui.activity.ModifyLoginPwdActivity"
    tools:showIn="@layout/activity_modify_login_pwd">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/modify_login_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_vertical_margin"
        android:layout_marginTop="@dimen/edit_text_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_red_500_18dp"
            android:drawableStart="@drawable/ic_lock_outline_red_500_18dp"
            android:drawablePadding="@dimen/edit_text_vertical_margin"
            android:hint="@string/modify_login_old_pwd"
            android:inputType="numberPassword"
            android:textSize="@dimen/text_normal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/modify_login_new_pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_vertical_margin"
        android:layout_marginTop="@dimen/edit_text_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_18dp"
            android:drawableStart="@drawable/ic_lock_outline_black_18dp"
            android:drawablePadding="@dimen/edit_text_vertical_margin"
            android:hint="@string/modify_login_new1_pwd"
            android:inputType="numberPassword"
            android:textSize="@dimen/text_normal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/modify_login_new_pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_vertical_margin"
        android:layout_marginTop="@dimen/edit_text_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_18dp"
            android:drawableStart="@drawable/ic_lock_outline_black_18dp"
            android:drawablePadding="@dimen/edit_text_vertical_margin"
            android:hint="@string/modify_login_new2_pwd"
            android:inputType="numberPassword"
            android:textSize="@dimen/text_normal" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/modify_login_commit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/activity_vertical_mini_margin"
        android:background="@drawable/button_shape"
        android:text="@string/modify_login_commit" />

</LinearLayout>
